# Dionysus

./: .gitignore  CMakeLists.txt  README.md
examples/rips/: CMakeLists.txt  r.cpp
include/topology/: rips.h  rips.hpp  simplex.h  simplex.hpp
